# CA

./: .editorconfig  CMakeLists.txt  Game.cuh  Main.cu  Utils.cu  Utils.cuh
Anneal/: CMakeLists.txt  Main.cu
Automaton/: CMakeLists.txt  ConsoleRender.cpp  ConsoleRender.hpp  DeviceRender.cu  DeviceRender.cuh  DeviceRenderTest.cu  Environment.hpp  Game.cu  Game.cuh  GameTest.cu  IRender.hpp  NativeRender.cpp  NativeRender.hpp  NativeRenderTest.cpp  OpenGLRenderCallback.cpp  OpenGLRenderCallback.hpp  Rule.cu  Rule.cuh  RuleTest.cu
Life/: CMakeLists.txt  Game.cu  Game.cuh  Main.cu
Life_1/: CMakeLists.txt  Main.cu  Render.cpp  Render.hpp
Majority/: CMakeLists.txt  Main.cu
TracedLife/: CMakeLists.txt  Game.cu  Game.cuh  Main.cu  TracedLife.cu  TracedLife.cuh  UnitTest.cu  UnitTest.cuh
Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
glad/: CMakeLists.txt
